# .dot

./: .gitmodules  README.md  unpack.sh
content/: .gitconfig  .p10k.zsh  .zshrc
content/.config/iterm2/: AppSupport
content/.config/iterm_config/: com.googlecode.iterm2.plist  zsh.itermcolors
content/.config/kitty/: kitty.conf
content/.config/nvim/: init.lua  lazy-lock.json
content/.config/nvim/after/plugin/: alpha.lua  autopairs.lua  comment.lua  gitsigns.lua  kanagawa.lua  lsp.lua  lualine.lua  numbers.lua  nvim-tree.lua  oil.lua  possession.lua  rust.lua  snippets.lua  telescope.lua  treesitter.lua  vimtex.lua
content/.config/nvim/lua/config/: lazy.lua  opts.lua  remap.lua
content/.config/nvim/lua/maxfierro/: init.lua  opts.lua  packer.lua  remap.lua
content/.config/nvim/lua/plugin/: dashboard.lua  editor.lua  filesystem.lua  lang-server.lua  languages.lua  notes.lua  (+2 more)
content/.config/nvim/plugin/: packer_compiled.lua
content/.config/templates/: note.blg  note.fdb_latexmk  note.fls  note.tex
content/.config/uv/: uv-receipt.json
content/.config/zed/: keymap.json  settings.json  tasks.json
content/.config/zellij/: config.kdl
content/.config/zellij/layouts/: default.kdl
content/.ssh/: config  known_hosts  known_hosts.old
content/.templates/journal/: DAY.md
content/.templates/ml/: .gitignore
content/.templates/python/: .gitignore  pyproject.toml
content/.templates/python-uv/: .gitignore  LICENSE  README.md  pyproject.toml
content/.templates/rust/: .gitignore  Cargo.toml  README.md
content/.templates/rust-bin/: rustfmt.toml
(+5 files in other folders)
